--- a/Ecu911/Pages/EtapaContractual.razor
+++ b/Ecu911/Pages/EtapaContractual.razor
@@ -3,31 +3,23 @@
 <PageTitle>Etapa Contractual</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Contractual</MudText>
 <EditForm Model="@registro" >
-<MudGrid Style="padding:50px">
-        @*   yyyy/MM/dd*@
-    <MudItem xs="12" sm="6" md="6">
-            <MudDatePicker PickerVariant="PickerVariant.Dialog" HelperText="Fecha de suscripción del contrato/orden de compra" @bind-Date="registro.fechaSuscripcion" DateFormat="yyyy-MM-dd"></MudDatePicker>
-    </MudItem>
 
-    <MudItem xs="12" sm="6" md="6">
-            <MudDatePicker PickerVariant="PickerVariant.Dialog" HelperText="Fecha de finalización del contrato/orden de compra" @bind-Date="registro.fechaFinalizacion" DateFormat="yyyy-MM-dd"></MudDatePicker>
-    </MudItem>
+    <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
+        <MudDatePicker PickerVariant="PickerVariant.Dialog" Label="Suscripción de Contrato" @bind-Date="registro.fechaSuscripcion" DateFormat="yyyy-MM-dd"></MudDatePicker>
+        </MudContainer>
+    <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
+        <MudSelect T="string" Label="Etapa(Actualizar deacuerdo a la fase que se encuetra)">
+            <MudSelectItem Value="@("Sin TDRS o Especificaciones Técnicas")" />
+            <MudSelectItem Value="@("Etapa Preparatoria")" />
+            <MudSelectItem Value="@("Etapa Precontractual")" />
+            <MudSelectItem Value="@("Etapa Contractual")" />
+            <MudSelectItem Value="@("Etapa Finalizado")" />
+            <MudSelectItem Value="@("Etapa Cancelado")" />
+        </MudSelect>
 
-    <MudItem xs="8" sm="6" md="6">
 
-            <MudTextField @bind-Value="registro.rucOferente" Label="Número de Ruc del Oferente Adjudicado" Variant="Variant.Text"></MudTextField>
-    </MudItem>
-
-    <MudItem xs="8" sm="6" md="6">
-        <MudTextField @bind-Value="registro.nombreProveedor" Label="Nombre del Proveedor" Variant="Variant.Text"></MudTextField>
-    </MudItem>
-
-    <MudItem xs="8" sm="6" md="6">
-            <MudTextField @bind-Value="registro.plazoContrato" Label="Plazo del contrato meses" Variant="Variant.Text"></MudTextField>
-    </MudItem>
-
-    
-</MudGrid>
+    </MudContainer>
+           
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
     <MudButton  OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
