--- a/Ecu911/Shared/NavMenu.razor
+++ b/Ecu911/Shared/NavMenu.razor
@@ -1,9 +1,9 @@
 ﻿<MudNavMenu>
     <MudNavLink Href="" Match="NavLinkMatch.All" Icon="@Icons.Material.Filled.Home">Inicio</MudNavLink>
     <MudNavLink Href="crearproceso" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Crear Proceso</MudNavLink>
-@*    <MudNavLink Href="etapapreparatoria" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Preparatoria</MudNavLink>
+    <MudNavLink Href="etapapreparatoria" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Preparatoria</MudNavLink>
     <MudNavLink Href="etapaprecontractual" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa PreContractual</MudNavLink>
-    <MudNavLink Href="etapacontractual" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Contractual</MudNavLink>*@
+    <MudNavLink Href="etapacontractual" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.List">Etapa Contractual</MudNavLink>
     <MudDivider Class="my-2" />
     <MudNavLink Href="usuarios" Match="NavLinkMatch.Prefix" Icon="@Icons.Filled.People">Usuarios</MudNavLink>
     <MudDivider Class="my-2" />
